# FireSohouAI

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README1.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  training_feedback.md
docs/: Architecture.md  DevelopmentRules.md  ProjectVision.md
docs/AIAnalysis/: README.md
docs/CameraDesign/: README.md  v0.1_camera_position.md  video_file_naming_rules.md
docs/MeetingNotes/: training_log_template.md
docs/Storyboard/: README.md  scene01_waiting_and_report.md
docs/v0.1/: specification.md
raspberry_pi/: capture_video.py
sora/: master_prompt.md
